--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                                 </a>
                             </li>
                             <li class="social-list-item">
-                                <a href="" class="social-list-link" width="20" height="20">
-                                    <svg class="social-list-icon">
+                                <a href="" class="social-list-link">
+                                    <svg class="social-list-icon" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
-                                <a href="" class="social-list-link" width="20" height="20" >
-                                    <svg class="social-list-icon">
+                                <a href="" class="social-list-link">
+                                    <svg class="social-list-icon" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -125,12 +125,72 @@
                          <div class="name-position">
                         <h3 class="suptitle">Ольга Репина</h3>
                          <p  class="suptitles" lang="en">Frontend Developer</p>
+                         <ul class="social-list">
+                            <li class="social-list-item">
+                               <a href="" class="social-list-link">
+                                   <svg class="social-list-icon" width="20" height="20">
+                                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                   </svg>
+                               </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                           </ul>
                         </div>
                     </li>
                     <li class="employes-card"><img src="./images/ourteam/img-5.jpg" alt="фото Николай Тарасов " width="270" height="260"/>
                         <div class="name-position">
                         <h3 class="suptitle">Николай Тарасов</h3>
                         <p  class="suptitles" lang="en">Marketing</p>
+                        <ul class="social-list">
+                            <li class="social-list-item">
+                               <a href="" class="social-list-link">
+                                   <svg class="social-list-icon" width="20" height="20">
+                                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                   </svg>
+                               </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                           </ul>
                         </div>
                     </li>
                     <li class="employes-card">
@@ -138,9 +198,38 @@
                          <div class="name-position">
                         <h3 class="suptitle">Михаил Ермаков</h3>
                          <p  class="suptitles" lang="en">UI Designer</p>
+                         <ul class="social-list">
+                            <li class="social-list-item">
+                               <a href="" class="social-list-link">
+                                   <svg class="social-list-icon" width="20" height="20">
+                                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                   </svg>
+                               </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="social-list-item">
+                                   <a href="" class="social-list-link">
+                                       <svg class="social-list-icon" width="20" height="20">
+                                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                           </ul>
                         </div>
                     </li>
-                   
                 </ul>
             </div>
             </section>
