--- a/index.html
+++ b/index.html
@@ -43,19 +43,40 @@
             <h2 hidden> Наши достоинства</h2>
             <div class="container">
             <ul class="text">
+                
                 <li class="ol-rel-tel">
+                    <div class="satellite">
+                    <svg class="obraz" width="65" height="70">
+                        <use href="./images/svg1/symbol-defs.svg#icon-antenna"></use>
+                    </svg>
+                    </div>
                     <h3 class="rel">Внимание к деталям</h3>
                     <p class="tel">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="ol-rel-tel">
+                    <div class="satellite">
+                        <svg class="obraz" width="66" height="70">
+                            <use href="./images/svg1/symbol-defs.svg#icon-vector"></use>
+                        </svg>
+                        </div>
                     <h3 class="rel">Пунктуальность</h3>
                     <p class="tel">Задача организации, в особнности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="ol-rel-tel">
+                    <div class="satellite">
+                        <svg class="obraz" width="70" height="53">
+                            <use href="./images/svg1/symbol-defs.svg#icon-lock"></use>
+                        </svg>
+                        </div>
                     <h3 class="rel">Планирование</h3>
                     <p class="tel">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="ol-rel-tel">
+                    <div class="satellite">
+                        <svg class="obraz" width="54" height="66">
+                            <use href="./images/svg1/symbol-defs.svg#icon-astronaut"></use>
+                        </svg>
+                        </div>
                     <h3 class="rel">Современные технологии</h3>
                     <p class="tel">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
