--- a/index.html
+++ b/index.html
@@ -255,6 +255,63 @@
                 </ul>
             </div>
             </section>
+            <section>
+                <div class="container">
+                    <h2 class="client-title">Постоянные клиенты</h2>
+                    <ul class="client-list list">
+                        <li class="client-item">
+                            <a href="" class="client-link">
+                            <svg class="client-icon" widh="106" hight="60">
+                                <use href="./images/svg1-2/symbol-defs.svg#icon-group"></use>
+
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="" class="client-link">
+                            <svg class="client-icon" widh="106" hight="60">
+                                <use href="./images/svg1-2/symbol-defs.svg#icon-Logo"></use>
+
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="" class="client-link">
+                            <svg class="client-icon" widh="106" hight="60">
+                                <use href="./images/svg1-2/symbol-defs.svg#icon-Logo-1"></use>
+
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="" class="client-link">
+                            <svg class="client-icon" widh="106" hight="60">
+                                <use href="./images/svg1-2/symbol-defs.svg#icon-Logo-2"></use>
+
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="" class="client-link">
+                            <svg class="client-icon" widh="106" hight="60">
+                                <use href="./images/svg1-2/symbol-defs.svg#icon-Logo-3"></use>
+
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="" class="client-link">
+                            <svg class="client-icon" widh="106" hight="60">
+                                <use href="./images/svg1-2/symbol-defs.svg#icon-Logo-4"></use>
+
+                            </svg>
+                        </a>
+                        </li>
+                
+                    </ul>
+
+                </div>
+            </section>
         </main> 
         <!--ABOUT-->
         <!--FOOTER-->
