--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
                          <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/svg1-2-3/symbol-defs.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
                                     <svg class="social-list-icon" width="20" height="20">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        <use href="./images/svg1-2-3/symbol-defs.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link" >
                                     <svg class="social-list-icon" width="20" height="20">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        <use href="./images/svg1-2-3/symbol-defs.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link"  >
                                     <svg class="social-list-icon" width="20" height="20">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        <use href="./images/svg1-2-3/symbol-defs.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -150,28 +150,28 @@
                             <li class="social-list-item">
                                <a href="" class="social-list-link">
                                    <svg class="social-list-icon" width="20" height="20">
-                                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                       <use href="./images/svg1-2-3/symbol-defs.svg#icon-instagram-2"></use>
                                    </svg>
                                </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link">
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-twitter-1"></use>
                                        </svg>
                                    </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link" >
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-facebook-1"></use>
                                        </svg>
                                    </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link"  >
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-linkedin-1"></use>
                                        </svg>
                                    </a>
                                </li>
@@ -186,28 +186,28 @@
                             <li class="social-list-item">
                                <a href="" class="social-list-link">
                                    <svg class="social-list-icon" width="20" height="20">
-                                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                       <use href="./images/svg1-2-3/symbol-defs.svg#icon-instagram-2"></use>
                                    </svg>
                                </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link">
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-twitter-1"></use>
                                        </svg>
                                    </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link" >
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-facebook-1"></use>
                                        </svg>
                                    </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link"  >
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-linkedin-1"></use>
                                        </svg>
                                    </a>
                                </li>
@@ -223,28 +223,28 @@
                             <li class="social-list-item">
                                <a href="" class="social-list-link">
                                    <svg class="social-list-icon" width="20" height="20">
-                                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                       <use href="./images/svg1-2-3/symbol-defs.svg#icon-instagram-2"></use>
                                    </svg>
                                </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link">
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-twitter-1"></use>
                                        </svg>
                                    </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link" >
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-facebook-1"></use>
                                        </svg>
                                    </a>
                                </li>
                                <li class="social-list-item">
                                    <a href="" class="social-list-link"  >
                                        <svg class="social-list-icon" width="20" height="20">
-                                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                           <use href="./images/svg1-2-3/symbol-defs.svg#icon-linkedin-1"></use>
                                        </svg>
                                    </a>
                                </li>
