--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </ul>
             </div>
             </section>
-            <section>
+            <section class="section">
                 <div class="container">
                     <h2 class="client-title">Постоянные клиенты</h2>
                     <ul class="client-list list">
