--- a/index.html
+++ b/index.html
@@ -317,11 +317,13 @@
         <!--FOOTER-->
         <footer class="footer">
                 <div class="container log">
+                    <div class="log-item">
                 <a id="logo"  href="">
                     <span class="logotipe">Web</span><span class="logotips">Studio</span> 
                 </a>
+                    </div>
                 </div>
-            <address>
+                <address>
                 <ul class="container">
                     <li class="cl21">
                         <a class="cl1" href="">г. Киев, пр-т Леси Украинки, 26</a>
@@ -333,8 +335,40 @@
                         <a class="cl" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
                 </ul>
-    
             </address>
+            <div class="container social-network">
+                <h3 class="soc-foot-h3">присоединяйтесь</h3>
+                <ul class="social-list-footer">
+                    <li class="social-list-item">
+                        <a href="" class="social-link-footer">
+                            <svg class="soc-icon-footer" width="20" hight="20">
+                                <use href="./images/svg1-2-3/symbol-defs.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-link-footer">
+                            <svg class="soc-icon-footer" width="20" hight="20">
+                                <use href="./images/svg1-2-3/symbol-defs.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-link-footer">
+                            <svg class="soc-icon-footer" width="20" hight="20">
+                                <use href="./images/svg1-2-3/symbol-defs.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                <li class="social-list-item">
+                    <a href="" class="social-link-footer">
+                        <svg class="soc-icon-footer" width="20" hight="20">
+                            <use href="./images/svg1-2-3/symbol-defs.svg#"></use>
+                        </svg>
+                    </a>
+                </li>
+            </div>
         </footer>
       <!--FOOTER-->
     </body>
