--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
             </ul>
            </nav>
             <ul class="contact">
-            <li class="contact"><a class="contact-maill" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contact"><a class="contact-phoun-number" href="tel:+38096111111">+38 096 111 11 11</a></li>
+            <li class="contact-item"><a class="contact-maill" href="mailto:info@devstudio.com">
+               info@devstudio.com
+            </a>
+            </li>
+            <li class="contact-item"><a class="contact-phoun-number" href="tel:+38096111111">
+                +38 096 111 11 11
+            </a>
+            </li>
             </ul>
         </div>
         </header>
@@ -317,17 +323,13 @@
         <!--FOOTER-->
         <footer class="footer">
                 <div class="container log">
-                    <div class="log-item">
-                <a id="logo"  href="">
+                    <div class="12345"
+                <a class="logo-footer"  href="">
                     <span class="logotipe">Web</span><span class="logotips">Studio</span> 
                 </a>
-                    </div>
-                </div>
                 <address>
-                <ul class="container">
-                    <li class="cl21">
-                        <a class="cl1" href="">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
+                        <p class="cl13" href="">г. Киев, пр-т Леси Украинки, 26</p>
+                <ul class="list">
                     <li class="cl2">
                         <a class="cl" href="mailto:info@example.com">info@example.com </a>
                 </li>
@@ -336,8 +338,10 @@
                 </li>
                 </ul>
             </address>
-            <div class="container social-network">
+            </div>
+            <div class="social-network">
                 <h3 class="soc-foot-h3">присоединяйтесь</h3>
+                <div class="">
                 <ul class="social-list-footer">
                     <li class="social-list-item">
                         <a href="" class="social-link-footer">
@@ -360,15 +364,18 @@
                             </svg>
                         </a>
                     </li>
-                </ul>
+                
                 <li class="social-list-item">
-                    <a href="" class="social-link-footer">
+                    <a href="#" class="social-link-footer">
                         <svg class="soc-icon-footer" width="20" hight="20">
-                            <use href="./images/svg1-2-3/symbol-defs.svg#"></use>
+                            <use href="./images/svg1-2-3/symbol-defs.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
                 </li>
-            </div>
+              </ul>
+             </div>
+                </div>
+                </div>
         </footer>
       <!--FOOTER-->
     </body>
