--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     </li>
                 
                 <li class="social-list-item">
-                    <a href="#" class="social-link-footer">
+                    <a href="" class="social-link-footer">
                         <svg class="soc-icon-footer" width="20" hight="20">
                             <use href="./images/svg1-2-3/symbol-defs.svg#icon-linkedin-1"></use>
                         </svg>
