--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,27 @@
         </ul>
         </nav>
         <ul class="contact">
-        <li class="contact"><a class="contact-maill"  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contact"><a class="contact-phoun-number"  href="tel:+38096111111">+38 096 111 11 11</a></li>
+        <li class="contact-m">
+            <a class="contact-maill"  href="mailto:info@devstudio.com">
+                info@devstudio.com
+                <div class="contact-maill-cont">
+                    <svg class="contact-maill-svg" width="16px" height="12px">
+                        <use href="./images/mail-tel/symbol-defs.svg#icon-mailll1"></use>
+                    </svg>
+    
+                   </div>
+            </a>
+        </li>
+        <li class="contact-m">
+            <a class="contact-phoun-number"  href="tel:+38096111111">
+            +38 096 111 11 11
+            <div class="contact-maill-cont">
+                <svg class="contact-maill-svg" width="10px" height="16px">
+                    <use href="./images/mail-tel/symbol-defs.svg#icon-telefo1"></use>
+                </svg>
+            </div>
+        </a>
+    </li>
         </ul> 
     </div>
     </header>
