--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </div>
             <div class="social-network">
                 <h3 class="soc-foot-h3">присоединяйтесь</h3>
-                <div class="">
+                <div class="ссс">
                 <ul class="social-list-footer">
                     <li class="social-list-item">
                         <a href="" class="social-link-footer">
