--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                </a>
             </li>
             <li class="contact-items">
-                <a class="contact-phoun-number" href="tel:+38096111111">
+                <a class="contact-maill" href="tel:+38096111111">
                 +38 096 111 11 11
                 
                 <div class="contact-maill-cont">
