--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,11 @@
             </a>
         </li>
         <li class="contact-m">
-            <a class="contact-phoun-number"  href="tel:+38096111111">
+            <a class="contact-maill"  href="tel:+38096111111">
             
             <div class="contact-maill-cont">
                 <svg class="contact-maill-svg" width="10px" height="16px">
                     <use href="./images/mail-tel/symbol-defs.svg#icon-telefo1"></use>
-                
                 </svg>
                 +38 096 111 11 11
             </div>
