--- a/portfolio.html
+++ b/portfolio.html
@@ -163,7 +163,7 @@
 <!--FOOTER-->
 <footer class="footer">
     <div class="container log">
-        <div class="12345"
+        <div class=""
     <a class="logo-footer"  href="">
         <span class="logotipe">Web</span><span class="logotips">Studio</span> 
     </a>
@@ -181,7 +181,7 @@
 </div>
 <div class="social-network">
     <h3 class="soc-foot-h3">присоединяйтесь</h3>
-    <div class="">
+    <div class="ссс">
     <ul class="social-list-footer">
         <li class="social-list-item">
             <a href="" class="social-link-footer">
