--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <ul class="client-list list">
                         <li class="client-item">
                             <a href="" class="client-link">
-                            <svg class="client-icon" widh="106" hight="60">
+                            <svg class="client-icon" widh="" hight="">
                                 <use href="./images/svg1-2/symbol-defs.svg#icon-group"></use>
 
                             </svg>
@@ -288,7 +288,7 @@
                         </li>
                         <li class="client-item">
                             <a href="" class="client-link">
-                            <svg class="client-icon" widh="106" hight="60">
+                            <svg class="client-icon" widh="" hight="">
                                 <use href="./images/svg1-2/symbol-defs.svg#icon-Logo"></use>
 
                             </svg>
@@ -296,7 +296,7 @@
                         </li>
                         <li class="client-item">
                             <a href="" class="client-link">
-                            <svg class="client-icon" widh="106" hight="60">
+                            <svg class="client-icon" widh="" hight="">
                                 <use href="./images/svg1-2/symbol-defs.svg#icon-Logo-1"></use>
 
                             </svg>
@@ -304,7 +304,7 @@
                         </li>
                         <li class="client-item">
                             <a href="" class="client-link">
-                            <svg class="client-icon" widh="106" hight="60">
+                            <svg class="client-icon" widh="" hight="">
                                 <use href="./images/svg1-2/symbol-defs.svg#icon-Logo-2"></use>
 
                             </svg>
@@ -312,7 +312,7 @@
                         </li>
                         <li class="client-item">
                             <a href="" class="client-link">
-                            <svg class="client-icon" widh="106" hight="60">
+                            <svg class="client-icon" widh="" hight="">
                                 <use href="./images/svg1-2/symbol-defs.svg#icon-Logo-3"></use>
 
                             </svg>
@@ -320,7 +320,7 @@
                         </li>
                         <li class="client-item">
                             <a href="" class="client-link">
-                            <svg class="client-icon" widh="106" hight="60">
+                            <svg class="client-icon" widh="" hight="">
                                 <use href="./images/svg1-2/symbol-defs.svg#icon-Logo-4"></use>
 
                             </svg>
