--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             <span class="logotipe">Web</span><span class="logotip">Studio</span> 
         </a>
         <ul class="menu-li">
-            <li class="menu-item"><a class="menu-li" href="">Студия</a></li>
+            <li class="menu-item"><a class="menu-li" href="./index.html">Студия</a></li>
             <li class="menu-item"><a class="menu-li" href="">Портфолио</a></li>
             <li class="menu-item"><a class="menu-li" href="">Контакты</a></li>
         </ul>
