--- a/index.html
+++ b/index.html
@@ -356,21 +356,21 @@
                 <h3 class="soc-foot-h3">присоединяйтесь</h3>
                 <div class="ссс">
                 <ul class="social-list-footer">
-                    <li class="social-list-item">
+                    <li class="social-list-items">
                         <a href="" class="social-link-footer">
                             <svg class="soc-icon-footer" width="20" hight="20">
                                 <use href="./images/svg1-2-3/symbol-defs.svg#icon-instagram-2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list-item">
+                    <li class="social-list-items">
                         <a href="" class="social-link-footer">
                             <svg class="soc-icon-footer" width="20" hight="20">
                                 <use href="./images/svg1-2-3/symbol-defs.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list-item">
+                    <li class="social-list-items">
                         <a href="" class="social-link-footer">
                             <svg class="soc-icon-footer" width="20" hight="20">
                                 <use href="./images/svg1-2-3/symbol-defs.svg#icon-facebook-1"></use>
@@ -378,7 +378,7 @@
                         </a>
                     </li>
                 
-                <li class="social-list-item">
+                <li class="social-list-items">
                     <a href="" class="social-link-footer">
                         <svg class="soc-icon-footer" width="20" hight="20">
                             <use href="./images/svg1-2-3/symbol-defs.svg#icon-linkedin-1"></use>
